. r  further quickfixes